fix: truncate long usernames in poster-info column

--- a/stylesheets/components/topic-list.scss
+++ b/stylesheets/components/topic-list.scss
@@ -69,6 +69,11 @@ $margin-6: 6px;
         width: 70%;
         float: left;
         text-align: right;
+        // In case of long usernames
+        .editor {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
     .badge-wrapper, .topic-list-item .discourse-tags {
         font-size: var(--font-0);
